--- a/templates/imagem.html
+++ b/templates/imagem.html
@@ -38,7 +38,7 @@
             <section class="conteudo">
                 <section class="imagem">
                     <div class="imagem__conteudo">
-                        <img class="imagem__imagem" src="{% static '/assets/imagens/galeria/' %}{{ foto.caminho_foto }}">
+                        <img class="imagem__imagem" src="{{ foto.caminho_foto.url }}">
                         <div class="imagem__info">
                             <div class="imagem__texto">
                                 <p class="imagem__titulo">{{ foto.nome }}</p>
